--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.14.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "multer": "^1.1.0"
   }
 }
