--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "http": "0.0.0",
-    "multer": "^1.1.0"
+    "multer": "^1.1.0",
+    "nodemailer": "^1.10.0",
+    "q": "^1.4.1",
+    "unirest": "^0.4.2"
   }
 }
