--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.7.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "http": "0.0.0",
